# NoCapEdit

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  build.rs  tauri.conf.json
.agents/: AGENTS.md
docs/: DEVELOPMENT.md  SHORTCUTS.md  USER_GUIDE.md  history.md  implementation-plan.md  implementation_plan.md  mvp-spec.md  spec.md  task.md
docs/auto_update_check/: implementation_plan.md  task.md  walkthrough.md
docs/bugfix-sidebar-double-create/: implementation_plan.md  task.md  walkthrough.md
docs/char_count_setting/: implementation_plan.md  task.md  walkthrough.md
docs/ctrl_s_manual_save/: implementation_plan.md  task.md  walkthrough.md
docs/deferred_file_creation/: implementation_plan.md  task.md  walkthrough.md
docs/disable_context_menu/: implementation_plan.md  task.md
docs/disable_shortcuts/: implementation_plan.md  task.md
docs/display_version_in_titlebar/: implementation_plan.md  walkthrough.md
docs/dry_save_settings/: implementation_plan.md  task.md  walkthrough.md
docs/exclude_newlines_char_count/: implementation_plan.md  task.md  walkthrough.md
docs/fix_update_version_check/: implementation_plan.md  task.md  walkthrough.md
docs/folder_delete_protection/: implementation_plan.md  task.md
docs/font_scaling/: implementation_plan.md  task.md  walkthrough.md
docs/font_selection_functionality/: implementation_plan.md  task.md  walkthrough.md
docs/icon_and_editor_improvements/: implementation_plan.md  (+2 more)
icons/: icon.icns
nsis/: Japanese.nsh  installer.nsi
src/: main.rs
wix/: file-association.wxs
(+153 files in other folders)
