[package]
name = "NoCapEdit"
version = "0.2.22"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [ "window-set-title", "window-show", "shell-open", "dialog-open", "dialog-save", "dialog-ask", "dialog-message"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
dirs = "5.0"
fontdb = "0.16"
trash = "3.0"
notify = "6.1.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
